cholera 0.7.9.9046
==================

- add/set snowMap(latlong = FALSE).
- add experimental longitude and latitude to fatalities.unstacked.


cholera 0.7.9.9045
==================

- add experimental longitude and latitude to fatalities, fatalities.address,
  roads, pumps and pumps.vestry.
- remove outdated prototype lat/long data.


cholera 0.7.9.9044
==================

- add orthoProjPumpPDF().
- amend pumpsPDF() and subsetPDF().


cholera 0.7.9.9043
==================

- add non-address fatalities to latlongSnowMap().
- use inherits() instead of class().


cholera 0.7.9.9042
==================

- add latlongFatalities() for OSM coordinates.


cholera 0.7.9.9041
==================

- add thresholdFataltiesGraph().
- add fatalitiesGraphData().
- add partitionFatalities() prototype.
- add partitionFatalitiesPDF().


cholera 0.7.9.9040
==================

- add partitionOrthoAddressesPDF().
- amend latlongOrthoAddress() for OSM coordinates.


cholera 0.7.9.9039
==================

- add partitionAddressesPDF().
- amend latlongAddress() for OSM coordinates.


cholera 0.7.9.9038
==================

- rename latlongFramePDF() to framePartitionPDF().
- set asp = 1 in framePartitionPDF() and pumpsPDF().


cholera 0.7.9.9037
==================

- amend latlongRoads() for OSM coordinates.


cholera 0.7.9.9036
==================

- add addCase(case %in% c("all", "anchor"), col = col).


cholera 0.7.9.9035
==================

- add temporary fix for cases 299 and 430 in latlongAddress().
- temporarily use latlongAddress() in latlongWalkingPath().
- add/set addCase(pch = 1, cex = 1, point.lwd = 2).


cholera 0.7.9.9034
==================

- amend latlongNearestPump() for observed cases.


cholera 0.7.9.9033
==================

- use cholera::ortho.proj$road.segment in latlongOrthoAddress().
- use cholera::ortho.proj.pump$road.segment in latlongOrthoPump().


cholera 0.7.9.9032
==================

- use latlong*() prototypes in latlongEmbed().


cholera 0.7.9.9031